fix overflow, make the user nav bar fixed, adjust styling of profile page, add kindness journal main header

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,5 +9,5 @@
     margin: 0;
     padding: 0;
     font-family: "Graphik", "Marmelad", "ABeeZee", Verdana, Tahoma, sans-serif;
-    overflow: hidden;
+    // overflow: hidden;
 }
