--- a/src/components/KindnessJournal/KindnessJournal.scss
+++ b/src/components/KindnessJournal/KindnessJournal.scss
@@ -4,5 +4,40 @@
 .journal {
     display: flex;
     width: 100%;
-    height: 90vh;
+    // overflow-y: scroll;
+
+    &__header-first {
+        color: #023e8a;
+        width: 40%;
+        border-radius: 16px;
+        text-transform: uppercase;
+        font-size: 1.3rem;
+        font-family: 'Marmelad';
+        // background-image: linear-gradient(to right, #00b4d8, #48cae4, #90e0ef, #ade8f4);
+        text-align: center;
+        padding-bottom: 2rem;
+        margin: auto;
+    }
+
+    &__underline {
+        font-family: 'Marmelad';
+        position: relative;
+
+        &:after {
+            content: "";
+            position: absolute;
+            bottom: -15px;
+            left: 0;
+            height: 8px;
+            width: 110%;
+            border: solid 4px #069CDA;
+            border-color: #069CDA transparent transparent transparent;
+            border-radius: 50%;
+
+            @include tablet {
+                bottom: -19px;
+                height: 11px;
+            }
+        }
+    }
 }
